@@ -23,12 +23,24 @@
 
 /**
  * @test
+ * @bug 8284161 8287103
  * @summary Test ThredMXBean.findMonitorDeadlockedThreads with cycles of
  *   platform and virtual threads in deadlock
- * @compile --enable-preview -source ${jdk.version} VirtualThreadDeadlocks.java
- * @run main/othervm --enable-preview VirtualThreadDeadlocks PP
- * @run main/othervm --enable-preview VirtualThreadDeadlocks PV
- * @run main/othervm --enable-preview VirtualThreadDeadlocks VV
+ * @enablePreview
+ * @modules java.management
+ * @run main/othervm VirtualThreadDeadlocks PP
+ * @run main/othervm VirtualThreadDeadlocks PV
+ * @run main/othervm VirtualThreadDeadlocks VV
+ */
+
+/**
+ * @test
+ * @requires vm.continuations
+ * @enablePreview
+ * @modules java.management
+ * @run main/othervm -XX:-VMContinuations VirtualThreadDeadlocks PP
+ * @run main/othervm -XX:-VMContinuations VirtualThreadDeadlocks PV
+ * @run main/othervm -XX:-VMContinuations VirtualThreadDeadlocks VV
  */
 
 import java.lang.management.ManagementFactory;
@@ -39,6 +51,8 @@ import java.util.stream.Stream;
 public class VirtualThreadDeadlocks {
     private static final Object LOCK1 = new Object();
     private static final Object LOCK2 = new Object();
+
+    private static volatile boolean lock2Held;
 
     /**
      * PP = test deadlock with two platform threads
@@ -53,7 +67,9 @@ public class VirtualThreadDeadlocks {
                 : Thread.ofVirtual();
         Thread thread1 = builder1.start(() -> {
             synchronized (LOCK1) {
-                try { Thread.sleep(1000); } catch (Exception e) { }
+                while (!lock2Held) {
+                    try { Thread.sleep(10); } catch (Exception e) { }
+                }
                 synchronized (LOCK2) { }
             }
         });
@@ -65,7 +81,7 @@ public class VirtualThreadDeadlocks {
                 : Thread.ofVirtual();
         Thread thread2 = builder2.start(() -> {
             synchronized (LOCK2) {
-                try { Thread.sleep(1000); } catch (Exception e) { }
+                lock2Held = true;
                 synchronized (LOCK1) { }
             }
         });
